--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon --ignore 'db.json' server.js",
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "lowdb": "^3.0.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
+    "redis": "^4.1.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   }
